--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next": "16.0.4",
     "next-auth": "^5.0.0-beta.30",
     "prisma": "^5.22.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
