--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^3.0.3",
+    "lucide-react": "^0.555.0",
     "next": "16.0.4",
     "next-auth": "^5.0.0-beta.30",
     "prisma": "^5.22.0",
